	- verified regex matches edge conditions for 'xl'
	- verified regex matches edge conditions for 'xc'
	- verified regex matches edge conditions for 'cd'
	- verified regex matches edge conditions for 'cm'
	- merging this branch back into develop in order to work on the next feature:
		- converting integers into roman numerals
		- this will allow for full testing of string verification in the long run

-> 02/08/2017 (branch: feature_encode_int_to_roman_numeral)
	- created a new branch in order to take an integer and create a roman numeral string
	- renamed rmn_calc.c to test_rmn_calc.c to differentiate between different tests
	- added test_rmn_calc_enc_dcd.c to project for encoding and decoding roman numeral strings
	- verified encoding to 'I' for edge conditions 1 and 3
	- verified encoding to 'IV' for 4
	- verified encoding to 'V' for edge conditions 5 and 8
	- verified encoding to 'IX' for 9
	- verified encoding to 'X' for edge conditions 10 and 39
	- verified encoding to 'XL' for edge conditions 40 and 49
	- verified encoding to 'L' for edge conditions 50 and 89
	- verified encoding to 'XC' for edge conditions 90 and 99
	- verified encoding to 'C' for edge conditions 100 and 399
	- verified encoding to 'CD' for edge conditions 400 and 499
	- verified encoding to 'D' for edge conditions 500 and 899
	- verified encoding to 'CM' for edge conditions 900 and 999
	- verified encoding to 'M' for conditions of 1000 and 1999
	
-> 02/08/2017 (branch: feature_verify_input_string)
	- in process of adding test to check file that the roman numerals are written to and compare it to a master file to verify accuracy

-> 02/09/2017 (branch: feature_verify_input_string)
	- added test for writing generated roman numerals to file after verification, and compare to master file to verify accuracy
	
-> 02/09/2017 (branch: feature_decode_roman_numeral_to_int)
	- added new branch to add feature needed to decode roman numerals to integers
	