@@ -1,17 +1,17 @@
 #!/bin/bash
 
 xdg-open main.c
-sleep .5
+sleep 1
 xdg-open rmn_calc.c
-sleep .5
+sleep 1
 xdg-open rmn_calc.h
-sleep .5
+sleep 1
 xdg-open test_rmn_calc_regex.c
-sleep .5
+sleep 1
 xdg-open test_rmn_calc_enc_dcd.c
-sleep .5
+sleep 1
 xdg-open test_rmn_calc.h
-sleep .5
+sleep 1
 xdg-open common.h
-sleep .5
+sleep 1
 xdg-open change_log.txt
