@@ -5,5 +5,6 @@ void RMN_bfr_init(char *str);
 int RMN_init(void);
 int RMN_verify_string(char *str);
 void RMN_encode_int(int n, char *str);
+void RMN_decode_str(int *n, char *str);
 
 #endif // RMN_CALC_H
